--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <header style="width: 100%; height: 70px; background-color: #FF0000;"></header>
-
+<body style="margin: 0; padding: 0;">
+    
+</body>
 <footer style="width: 100%; height: 60px; background-color: #00FF00; position: absolute; bottom: 0; text-align: center; line-height: 60px;">Best School</footer>
 </html>
