--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="shortcut icon" href="./images/icon.png"/>
         <link rel="stylesheet" href="./styles/4-common.css"/>
-        <link rel="stylesheet" href="./styles/5-filters.css"/>
+        <link rel="stylesheet" href="./styles/6-filters.css"/>
         <link rel="stylesheet" href="./styles/3-header.css"/>
         <link rel="stylesheet" href="./styles/3-footer.css"/>
     </head>
@@ -16,11 +16,28 @@
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
-                    <h4>Some fake wsasdadasdaasdassssssssssssssssssssssssssssssssssssssssssssssssss</h4>
+                    <h4>Some fake content</h4>
+                    <ul class="popover">
+                        <li><h2>Arizona:</h2></li>
+                        <ul>
+                            <li>page</li>
+                            <li>page2</li>
+                        </ul>
+                        <li><h2>California:</h2></li>
+                        <ul>
+                            <li>San francisco</li>
+                        </ul>
+                    </ul>
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
                     <h4>Fake ass content</h4>
+                    <ul class="popover">
+                        <li>TV</li>
+                        <li>Internet</li>
+                        <li>Iron</li>
+                        <li>Kitchen</li>
+                    </ul>
                 </div>
                 <button>Search</button>
             </section>
