--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -26,6 +26,7 @@
                         <li><h2>California:</h2></li>
                         <ul>
                             <li>San francisco</li>
+                            <li>Los Altos</li>
                         </ul>
                     </ul>
                 </div>
